--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Bonappetit</string>
+
+    <string name="stock_list_title">食材管理</string>
+    <string name="stock_list_register_btn">登録</string>
+    <string name="stock_list_search_btn">絞り込み:OFF</string>
+    <string name="stock_list_search_by_name_et">検索</string>
+    <string name="stock_list_search_by_name_exec_btn">虫眼鏡のアイコン</string>
+    <string name="stock_list_sort_desc">↓降順:登録順</string>
+
 </resources>
