--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="sr_input_num">個数を入力してください</string>
     <string name="sr_food_not_selected">食べ物を選択してください</string>
     <string name="sr_register">登録</string>
+    <string name="sr_food_selector">食材を選択してください</string>
+    <string name="sr_alert">エラーが発生しました</string>
+    <string name="sr_date">ここをタップで日付を選択</string>
 
     <!-- 消費履歴(Consume history) -->
     <string name="ch_title">消費履歴</string>
