--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="sr_current_stock">現在%1$d%2$sの在庫があります</string>
     <string name="sr_current_stock_empty">在庫はありません</string>
 
+    <!-- 食材詳細画面(Stock detail) -->
+    <string name="sd_back_to_sm">戻る</string>
+
     <!-- 消費履歴(Consume history) -->
     <string name="ch_title">消費履歴</string>
 
