詳細画面を実装した。httpリクエスト失敗すると落ちる。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,10 @@
     <string name="sd_back_to_sm">戻る</string>
     <string name="sd_quantity_edited">編集済み</string>
     <string name="sd_note_edited">編集済み</string>
-    <string name="sd_save">保存</string>
+    <string name="sd_save">変更を保存</string>
     <string name="sd_name">名称</string>
     <string name="sd_note">備考を入力してください</string>
+    <string name="sd_consume">消費済</string>
 
     <!-- 消費履歴(Consume history) -->
     <string name="ch_title">消費履歴</string>
